source/stylesheets/components/_app.css.scss
/* ... */
.lang-description {
  margin-bottom: 0;
  text-transform: uppercase;
  font-size: 13px;
  line-height: 2px;
  font-weight: 700;
  margin-top: 10px;
}
.lang-level {
  font-size: 12px;
  opacity: 0.7;
}
.skills-ul {
  font-size: 14px;
}

.prog-ul {
  padding-top: 10px;
  padding-bottom: 10px;
  width: 105px;
  height: 160px;
}

/*
 * Facts
 * --------------------------------------------------------- */
#facts h1 {
  font-weight: 700;
}
@media (min-width: 400px) and (max-width: 768px) {
  #facts [class*="col-"] {
    width: 47%;
    margin: 10px 1.5%;
    padding: 0;
    float: left;
  }
}
/*
 * Contact
 * --------------------------------------------------------- */
#contact {
  background: #2d2e2e;
}
.list-contacts {
  list-style: none;
  padding-left: 0;
  margin: 2em 0;
}
.list-contacts li {
  margin-bottom: 10px;
  display: table;
}
.list-contacts [class*="fa-"] {
  margin-right: 15px;
  display: table-cell;
  width: 30px;
}
#contactForm .form-control[name="name"] {
  margin-bottom: 14px;
}
.ladda-button .ladda-spinner{
  top: 50%;
  margin-left: 5px;
  margin-top: 0;
}
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .list-contacts {
    list-style: none;
    padding-left: 0;
    margin-top: 2em;
  }
  #contactForm .form-control[name="name"] {
    margin-bottom: 0;
  }
}
/* ---------------------------------------------------------
 *	Index
 * --------------------------------------------------------- */
.main {
  width: 100%;
  height: 350px;
  background-color: transparent;
  display: block;
  position: relative;
  z-index: 2000;
  text-align: center;
}
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .main {
    height: 100%;
    max-height: 100%;
  }
}
.page {
  display: table;
  width: 100%;
  height: 100%;
  padding: 20px 0;
}
.wrapper {
  padding: 15px 0;
  display: table-cell;
  vertical-align: middle;
  height: 100%;
}
.wrapper .container {
  margin-top: 35px;
}
/* Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
  .wrapper .container {
    width: 1050px;
  }
}
/* Small devices (tablets, 768px and up) */
@media (min-width: 768px) {
  .page {
    padding: 40px 0;
  }
  .wrapper {
    padding: 0;
  }
}
/*
 * Home
 * --------------------------------------------------------- */
.heading {
  color: #fff;
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
  font-size: 1.5625em;
  text-transform: uppercase;
  font-weight: 700;
  margin: 30px 0 10px;
  line-height: 1.30208333em;
}

.hobbies {
  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

#signupForm .form-control-feedback {
  visibility: hidden;
}
lesshat-selector {
  -lh-property: 0; }
@-webkit-keyframes arrowBounce{ 0%{-webkit--webkit-transform:translateY(-20px);-moz--webkit-transform:translateY(-20px);-ms--webkit-transform:translateY(-20px);-webkit-transform:translateY(-20px)}50%{-webkit--webkit-transform:translateY(-10px);-moz--webkit-transform:translateY(-10px);-ms--webkit-transform:translateY(-10px);-webkit-transform:translateY(-10px)}100%{-webkit--webkit-transform:translateY(-20px);-moz--webkit-transform:translateY(-20px);-ms--webkit-transform:translateY(-20px);-webkit-transform:translateY(-20px)}}
@-moz-keyframes arrowBounce{ 0%{-webkit--moz-transform:translateY(-20px);-moz--moz-transform:translateY(-20px);-ms--moz-transform:translateY(-20px);-moz-transform:translateY(-20px)}50%{-webkit--moz-transform:translateY(-10px);-moz--moz-transform:translateY(-10px);-ms--moz-transform:translateY(-10px);-moz-transform:translateY(-10px)}100%{-webkit--moz-transform:translateY(-20px);-moz--moz-transform:translateY(-20px);-ms--moz-transform:translateY(-20px);-moz-transform:translateY(-20px)}}
@-o-keyframes arrowBounce{ 0%{-webkit--o-transform:translateY(-20px);-moz--o-transform:translateY(-20px);-ms--o-transform:translateY(-20px);-o-transform:translateY(-20px)}50%{-webkit--o-transform:translateY(-10px);-moz--o-transform:translateY(-10px);-ms--o-transform:translateY(-10px);-o-transform:translateY(-10px)}100%{-webkit--o-transform:translateY(-20px);-moz--o-transform:translateY(-20px);-ms--o-transform:translateY(-20px);-o-transform:translateY(-20px)}}
@keyframes arrowBounce{ 0%{-webkit--webkit-transform:translateY(-20px);-webkit--moz-transform:translateY(-20px);-webkit--ms-transform:translateY(-20px);-webkit-transform:translateY(-20px);-moz--webkit-transform:translateY(-20px);-moz--moz-transform:translateY(-20px);-moz--ms-transform:translateY(-20px);-moz-transform:translateY(-20px);-ms--webkit-transform:translateY(-20px);-ms--moz-transform:translateY(-20px);-ms--ms-transform:translateY(-20px);-ms-transform:translateY(-20px);-webkit-transform:translateY(-20px);-moz-transform:translateY(-20px);-ms-transform:translateY(-20px);transform:translateY(-20px);}50%{-webkit--webkit-transform:translateY(-10px);-webkit--moz-transform:translateY(-10px);-webkit--ms-transform:translateY(-10px);-webkit-transform:translateY(-10px);-moz--webkit-transform:translateY(-10px);-moz--moz-transform:translateY(-10px);-moz--ms-transform:translateY(-10px);-moz-transform:translateY(-10px);-ms--webkit-transform:translateY(-10px);-ms--moz-transform:translateY(-10px);-ms--ms-transform:translateY(-10px);-ms-transform:translateY(-10px);-webkit-transform:translateY(-10px);-moz-transform:translateY(-10px);-ms-transform:translateY(-10px);transform:translateY(-10px);}100%{-webkit--webkit-transform:translateY(-20px);-webkit--moz-transform:translateY(-20px);-webkit--ms-transform:translateY(-20px);-webkit-transform:translateY(-20px);-moz--webkit-transform:translateY(-20px);-moz--moz-transform:translateY(-20px);-moz--ms-transform:translateY(-20px);-moz-transform:translateY(-20px);-ms--webkit-transform:translateY(-20px);-ms--moz-transform:translateY(-20px);-ms--ms-transform:translateY(-20px);-ms-transform:translateY(-20px);-webkit-transform:translateY(-20px);-moz-transform:translateY(-20px);-ms-transform:translateY(-20px);transform:translateY(-20px);};
}
/* ... */

